[package]
edition = "2021"
name = "kafka-mirrormaker"
version = "0.1.0"
authors = ["zsedem"]

[dependencies]
clap = "2.34.0"
rdkafka = { version = "0.25", features = ["cmake-build"] }
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["time"] }
futures = "0.3.18"
